# personal-pilot

./: .env.gateway.example  .gitignore  AI.md  AUTONOMY_PLAN.md  CAPABILITIES.md  CURRENT_DIRECTION.md  CURRENT_TASK.md  Cargo.toml  DESIGN_NETWORK_IDENTITY.md  EXECUTION_ENGINE_ARTIFACT_STRATEGY.md  EXECUTION_LOG.md  EXECUTION_PROTOCOL.md  EXECUTION_STATE_MACHINE.md  FEATURES.md  FINGERPRINT_BOUNDARY.md  GOLDEN_FEATURES.md  LIGHTPANDA_V1_PLAN.md  LONG_TERM_ROADMAP.md  MODULE_SCOPE.md  PLAN.md  PROGRESS.md  README.md  ROADMAP.md  ROUND_SCHEDULER.md  RUN_STATE.json  STAGE_SUMMARY_2026-03-31.md  STATUS.md  TODO.md  VISION.md  findings.md  index.html  package.json  pnpm-lock.yaml  progress.md  task_plan.md  tsconfig.app.json  vite.config.ts
docs/: 01-project-charter.md  02-current-state.md  03-roadmap.md  04-improvement-backlog.md  05-ai-maintenance-playbook.md  06-windows-local-solution.md  07-local-parallel-module-split.md  08-local-submodule-breakdown.md  09-local-claimable-slice-board.md  10-codex-claim-protocol.md  11-codex-claim-templates-batch-01.md  12-final-18-percent-delivery-plan.md  13-adspower-deep-comparison.md  14-fingerprint-core-proxy-rpa-expansion-plan.md  15-first-family-core-controls.md  16-first-family-schema-consistency-runtime.md  17-full-app-audit-progress-reset.md  18-external-browser-integration-plan.md  19-phase-plan-and-scorecard.md  20-wave-2a-execution-plan.md  README.md  agent-alexstudio-dashboard-v0.md  agent-alexstudio-gateway-runbook.md  agent-alexstudio-gateway-v0.md  api-integration-guide.md  api-ops.md  browser-api-v1-examples.md  dual-entry-snapshot-cheat-sheet.md  dual-entry-snapshot-maintenance-example.md  entry-maintenance-command-index.md  entry-summary-update-example.md  explain-visibility-version-fields-plan.md  final-goal-progress-breakdown.md  identity-fingerprint-network-session-plan.md  lightpanda-api-task-structure.md  lightpanda-minimal-next-action-candidate.md  next-stage-execution-board-2026-04-15.md  next-stage-local-windows-execution-board.md  next-stage-mainline-after-provider-scope.md  perf-probe-branch-summary-2026-04-02.md  (+28 more)
gateway-ui/: app.css  app.js  index.html  ui-forms.html
scripts/: README.md  check_stage_entry_consistency.py  dashboard_preview_proxy.py  gateway_verify.sh  identity_stateful_test_server.py  lightpanda_verify.sh  preflight_release_env.sh  prod_live_maintenance_tick.sh  prod_proxy_geo_enrich.py  prod_proxy_pool_hygiene.py  proxy_backfill_source_metadata.py  proxy_harvest_mvp.py  proxy_longrun_report.py  proxy_mainline_verify.sh  proxy_real_longrun_driver.py  release_baseline_verify.sh  release_fast_verify.sh  run_agent_gateway.sh  run_control_plane.sh  run_round.py  scheduler_daemon.py  smoke_test.sh  (+3 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  lib.rs  main.rs  state.rs
(+159 files in other folders)
