[package]
name = "AutoOpenBrowser"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process"] }
axum = "0.7"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite"] }
uuid = { version = "1", features = ["v4", "serde"] }
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
base64 = "0.22"

[dev-dependencies]
tower = "0.5"
hyper = { version = "1", features = ["client", "http1"] }
tempfile = "3"
