[package]
name = "persona-pilot"
version = "0.1.0"
edition = "2021"

[lib]
name = "persona_pilot"
path = "src/lib.rs"

[[bin]]
name = "PersonaPilot"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process"] }
axum = "0.7"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite"] }
uuid = { version = "1", features = ["v4", "serde"] }
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
base64 = "0.22"
futures-util = "0.3"
tokio-tungstenite = "0.23"
libc = "0.2"
tower-http = { version = "0.6", features = ["fs"] }
rand = "0.8"

[dev-dependencies]
tower = "0.5"
hyper = { version = "1", features = ["client", "http1"] }
tempfile = "3"
rand = "0.8"
