[package]
name = "persona-pilot-desktop"
version = "0.1.0"
description = "PersonaPilot local Windows desktop"
authors = ["Codex"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "persona_pilot_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
anyhow = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-single-instance = "2"
persona-pilot = { version = "0.1.0", path = ".." }
windows = { version = "0.58", features = ["Win32_Foundation", "Win32_System_Threading", "Win32_UI_WindowsAndMessaging"] }
